filtré faits, début des hébergement à marseilles et les plus populaires

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <body>
 
 
-   <!------------ En-tête ------------->
+  <!------------ En-tête ------------->
 
 
   <header>
@@ -71,7 +71,7 @@
   </header>
 
 
-    <!------------ Main ------------->
+  <!------------ Main ------------->
 
 
   <main>
@@ -87,6 +87,171 @@
       <input type="text" name="search" required placeholder="Marseille, France">
       <button>Rechercher</button>
     </form>
+
+
+    <!------------ Filter ------------->
+
+
+    <div class="filters-container">
+      <p>Filtres</p>
+      <a class="filter" href=""><i class="fa-sharp fa-solid fa-money-bill-wave"></i>
+        <div>Économique</div>
+      </a>
+      <a class="filter" href=""><i class="fa-solid fa-child"></i>
+        <div>Familial</div>
+      </a>
+      <a class="filter" href=""><i class="fa-solid fa-heart"></i>
+        <div>Romantique</div>
+      </a>
+      <a class="filter" href=""><i class="fa-solid fa-dog"></i>
+        <div>Animaux autorisés</div>
+      </a>
+    </div>
+
+    <p class="infos"><i class="fa-solid fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
+
+
+    <!------------ Hebergements ------------->
+
+
+    <section class="hebergements-container">
+      <article class="marseille-container">
+
+
+        <!------------ Hebergements à Marseille ------------->
+
+
+        <h2>Hébergements à Marseille</h2>
+        <section class="marseille-cards-container">
+          <article class="marseille-card">
+            <img src="images/hebergements/auberge_la_cannebiere.webp" alt="">
+            <h3>Auberge La Cannebière</h3>
+            <p>nuit à partir de 25€</p>
+            <div class="star-container">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+          </article>
+          <article class="marseille-card">
+            <img src="images/hebergements/hotel_du_port.webp" alt="">
+            <h3>Hôtel du port</h3>
+            <p>Nuit à partir de 52€</p>
+            <div class="star-container">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+          </article>
+          <article class="marseille-card">
+            <img src="images/hebergements/hotel_les_mouettes.webp" alt="">
+            <h3>Hôtel les mouettes</h3>
+            <p>Nuit à partir de 76€</p>
+            <div class="star-container">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+          </article>
+          <article class="marseille-card">
+            <img src="images/hebergements/hotel_de_la_mer.webp" alt="">
+            <h3>Hôtel de la mer</h3>
+            <p>Nuit à partir de 46€</p>
+            <div class="star-container">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+          </article>
+          <article class="marseille-card">
+            <img src="images/hebergements/auberge_le_panier.webp" alt="">
+            <h3>Auberge Le Panier</h3>
+            <p>Nuit à partir de 23€</p>
+            <div class="star-container">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+          </article>
+          <article class="marseille-card">
+            <img src="images/hebergements/hotel_chez_amira.webp" alt="">
+            <h3>Hôtel chez Amina</h3>
+            <p>Nuit à partir de 96€</p>
+            <div class="star-container">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+          </article>
+        </section>
+        <a class="show-more" href="">Afficher plus</a>
+      </article>
+
+
+      <!------------ Hebergements les plus populaires ------------->
+
+
+      <article class="populary-container">
+        <h2>Les plus populaires</h2>
+        <section class="populary-cards-container">
+          <article class="populary-card">
+            <img src="images/hebergements/le_soleil_du_matin.webp" alt="">
+            <div class="populary-text-content">
+              <h3>Hôtel le soleil du matin</h3>
+              <p>Nuit à partir de 128€</p>
+              <div class="star-container">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
+            </div>
+          </article>
+          <article class="populary-card">
+            <img src="images/hebergements/au_coeur_de_leau.webp" alt="">
+            <div class="populary-text-content">
+            <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+            <p>Nuit à partir de 71€</p>
+            <div class="star-container">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+          </div>
+          </article>
+          <article class="populary-card">
+            <img src="images/hebergements/hotel_tout_bleu_et_blanc.webp" alt="">
+            <div class="populary-text-content">
+            <h3>Hôtel Tout bleu et Blanc</h3>
+            <p>Nuit à partir de 68€</p>
+            <div class="star-container">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+          </div>
+          </article>
+        </section>
+      </article>
+    </section>
+
   </main>
 
 </body>
