activités à marseille + footer

--- a/index.html
+++ b/index.html
@@ -259,38 +259,56 @@
 
     <article class="activities-container">
       <h2>Activités à Marseille</h2>
-      <section class="activites-cards-container">
+      <section class="activities-cards-container">
         <a href="#" class="activities-card">
           <img src="images/activites/vieux_port.webp" alt="">
           <h3>Vieux port</h3>
         </a>
-        <div class="activities-card-container">
-          <a href="#" class="activities-card">
-            <img src="images/activites/fort_de_pomegues.webp" alt="">
-            <h3>Fort de pomègues</h3>
-          </a>
-          <a href="#" class="activities-card">
-            <img src="images/activites/iles_de_frioul.webp" alt="">
-            <h3>îles de Frioul</h3>
-          </a>
-        </div>
+        <div class="duo-activities">
+        <a href="#" class="duo-activities-card">
+          <img src="images/activites/fort_de_pomegues.webp" alt="">
+          <h3>Fort de pomègues</h3>
+        </a>
+        <a href="#" class="duo-activities-card">
+          <img src="images/activites/iles_de_frioul.webp" alt="">
+          <h3>îles de Frioul</h3>
+        </a>
+      </div>
         <a href="#" class="activities-card">
           <img src="images/activites/parc_national_des_calanques.webp" alt="">
           <h3>Parc National des Calanques</h3>
         </a>
-        <div class="activities-card-container">
-          <a href="#" class="activities-card">
-            <img src="images/activites/notre_dame_de_la_garde.webp" alt="">
-            <h3>Notre-Dame-de-Garde</h3>
-          </a>
-          <a href="#" class="activities-card">
-            <img src="images/activites/parc_longchamp.webp" alt="">
-            <h3>Parc Longchamp</h3>
-          </a>
-        </div>
+        <div class="duo-activities">
+        <a href="#" class="duo-activities-card">
+          <img src="images/activites/notre_dame_de_la_garde.webp" alt="">
+          <h3>Notre-Dame-de-Garde</h3>
+        </a>
+        <a href="#" class="duo-activities-card">
+          <img src="images/activites/parc_longchamp.webp" alt="">
+          <h3>Parc Longchamp</h3>
+        </a>
+      </div>
       </section>
     </article>
   </main>
+  <footer>
+    <ul class="footer-links-container">
+      <h3>A propos</h3>
+      <li><a href="">Fonctionnement du site</a></li>
+      <li><a href="">Condition générales de vente</a></li>
+      <li><a href="">Données et confidentialité</a></li>
+    </ul>
+    <ul class="footer-links-container">
+      <h3>Nos hébergements</h3>
+      <li><a href="">Charte qualité</a></li>
+      <li><a href="">Soumettre votre hôtel</a></li>
+    </ul>
+    <ul class="footer-links-container">
+      <h3>Assistance</h3>
+      <li><a href="">Centre d'aides</a></li>
+      <li><a href="">Nous contacter</a></li>
+    </ul>
+  </footer>
 
 </body>
 
