--- a/index.html
+++ b/index.html
@@ -8,29 +8,8 @@
 
   <!-- Meta description -->
 
-  <meta name="description" content="">
+  <meta name="description" content="Réservation en ligne d'hébergements">
 
-  <!-- Open graph -->
-
-  <meta property="og:title" content="">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="">
-  <meta property="og:description" content="">
-  <meta property="og:locale" content="fr_FR">
-  <meta property="og:image" content="">
-  <meta property="og:image:width" content="">
-  <meta property="og:image:height" content="">
-
-  <!-- Open graph Twitter -->
-
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="">
-  <meta name="twitter:creator" content="">
-
-  <!-- Place favicon.ico in the root directory -->
-
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
 
   <!-- Stylesheet -->
 
@@ -57,9 +36,7 @@
 
 <body>
 
-
-  <!------------ En-tête ------------->
-
+  <!------------ header ------------->
 
   <header>
     <nav>
@@ -71,9 +48,7 @@
     </nav>
   </header>
 
-
   <!------------ Main ------------->
-
 
   <main>
 
@@ -83,11 +58,13 @@
     <div class="entete">
       <h2>Trouvez votre hébergement pour desvacances de rêve</h2>
       <p>En plein centre ville ou en pleine nature</p>
+      
       <form class="search-input">
         <label for="search"><i class="fa-sharp fa-solid fa-location-dot"></i></label>
         <input type="text" name="search" required placeholder="Marseille, France">
-        <button>Rechercher</button>
+        <button><p>Rechercher</p><i class="fa-solid fa-magnifying-glass"></i></button>
       </form>
+   
 
 
       <!------------ Filter ------------->
@@ -95,16 +72,20 @@
 
       <div class="filters-container">
         <p>Filtres</p>
-        <a class="filter" href=""><i class="fa-sharp fa-solid fa-money-bill-wave"></i>
+        <a class="filter" href="">
+          <i class="fa-sharp fa-solid fa-money-bill-wave"></i>
           <div>Économique</div>
         </a>
-        <a class="filter" href=""><i class="fa-solid fa-child"></i>
+        <a class="filter" href="">
+          <i class="fa-solid fa-child"></i>
           <div>Familial</div>
         </a>
-        <a class="filter" href=""><i class="fa-solid fa-heart"></i>
+        <a class="filter" href="">
+          <i class="fa-solid fa-heart"></i>
           <div>Romantique</div>
         </a>
-        <a class="filter" href=""><i class="fa-solid fa-dog"></i>
+        <a class="filter" href="">
+          <i class="fa-solid fa-dog"></i>
           <div>Animaux autorisés</div>
         </a>
       </div>
@@ -124,76 +105,76 @@
 
         <h2>Hébergements à Marseille</h2>
         <section class="marseille-cards-container">
-          <a href="#" class="marseille-card">
-            <img src="images/hebergements/auberge_la_cannebiere.webp" alt="">
+          <a href="#" class="marseille-card box-shadow">
+            <img src="images/hebergements/auberge_la_cannebiere.webp" alt="image d'une chambre de l'Auberge la Cannebière">
             <h3>Auberge La Cannebière</h3>
             <p>nuit à partir de 25€</p>
             <div class="star-container">
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star star-blue"></i>
+              <i class="fa-solid fa-star star-blue"></i>
+              <i class="fa-solid fa-star star-blue"></i>
+              <i class="fa-solid fa-star star-blue"></i>
+              <i class="fa-solid fa-star star-grey"></i>
             </div>
           </a>
-          <a href="#" class="marseille-card">
-            <img src="images/hebergements/hotel_du_port.webp" alt="">
+          <a href="#" class="marseille-card box-shadow">
+            <img src="images/hebergements/hotel_du_port.webp" alt="image d'une chambre de l'hôtel du port">
             <h3>Hôtel du port</h3>
             <p>Nuit à partir de 52€</p>
             <div class="star-container">
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star star-blue"></i>
+              <i class="fa-solid fa-star star-blue"></i>
+              <i class="fa-solid fa-star star-blue"></i>
+              <i class="fa-solid fa-star star-blue"></i>
+              <i class="fa-solid fa-star star-blue"></i>
             </div>
           </a>
-          <a href="#" class="marseille-card">
-            <img src="images/hebergements/hotel_les_mouettes.webp" alt="">
+          <a href="#" class="marseille-card box-shadow">
+            <img src="images/hebergements/hotel_les_mouettes.webp" alt="image d'une chambre de l'hôtel les mouettes">
             <h3>Hôtel les mouettes</h3>
             <p>Nuit à partir de 76€</p>
             <div class="star-container">
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star star-blue"></i>
+              <i class="fa-solid fa-star star-blue"></i>
+              <i class="fa-solid fa-star star-blue"></i>
+              <i class="fa-solid fa-star star-blue"></i>
+              <i class="fa-solid fa-star star-grey"></i>
             </div>
           </a>
-          <a href="#" class="marseille-card">
-            <img src="images/hebergements/hotel_de_la_mer.webp" alt="">
+          <a href="#" class="marseille-card box-shadow">
+            <img src="images/hebergements/hotel_de_la_mer.webp" alt="image d'une chambrede l'hôtel de la mer">
             <h3>Hôtel de la mer</h3>
             <p>Nuit à partir de 46€</p>
             <div class="star-container">
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star star-blue"></i>
+              <i class="fa-solid fa-star star-blue"></i>
+              <i class="fa-solid fa-star star-blue"></i>
+              <i class="fa-solid fa-star star-grey"></i>
+              <i class="fa-solid fa-star star-grey"></i>
             </div>
           </a>
-          <a href="#" class="marseille-card">
-            <img src="images/hebergements/auberge_le_panier.webp" alt="">
+          <a href="#" class="marseille-card box-shadow">
+            <img src="images/hebergements/auberge_le_panier.webp" alt="image d'une chambre de l'auberge de panier">
             <h3>Auberge Le Panier</h3>
             <p>Nuit à partir de 23€</p>
             <div class="star-container">
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star star-blue"></i>
+              <i class="fa-solid fa-star star-blue"></i>
+              <i class="fa-solid fa-star star-blue"></i>
+              <i class="fa-solid fa-star star-blue"></i>
+              <i class="fa-solid fa-star star-grey"></i>
             </div>
           </a>
-          <a href="#" class="marseille-card">
-            <img src="images/hebergements/hotel_chez_amira.webp" alt="">
+          <a href="#" class="marseille-card box-shadow">
+            <img src="images/hebergements/hotel_chez_amira.webp" alt="image d'une chambre de l'hôtel chez Amira">
             <h3>Hôtel chez Amina</h3>
             <p>Nuit à partir de 96€</p>
             <div class="star-container">
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star star-blue"></i>
+              <i class="fa-solid fa-star star-blue"></i>
+              <i class="fa-solid fa-star star-blue"></i>
+              <i class="fa-solid fa-star star-blue"></i>
+              <i class="fa-solid fa-star star-blue"></i>
             </div>
           </a>
         </section>
@@ -207,45 +188,45 @@
       <article class="populary-container">
         <h2>Les plus populaires</h2>
         <section class="populary-cards-container">
-          <a href="#" class="populary-card">
-            <img src="images/hebergements/le_soleil_du_matin.webp" alt="">
+          <a href="#" class="populary-card box-shadow">
+            <img src="images/hebergements/le_soleil_du_matin.webp" alt="image d'une chambre de l'hôtel le soleil du matin">
             <div class="populary-text-content">
               <h3>Hôtel le soleil du matin</h3>
               <p>Nuit à partir de 128€</p>
               <div class="star-container">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star star-blue"></i>
+                <i class="fa-solid fa-star star-blue"></i>
+                <i class="fa-solid fa-star star-blue"></i>
+                <i class="fa-solid fa-star star-blue"></i>
+                <i class="fa-solid fa-star star-blue"></i>
               </div>
             </div>
           </a>
-          <a href="#" class="populary-card">
-            <img src="images/hebergements/au_coeur_de_leau.webp" alt="">
+          <a href="#" class="populary-card box-shadow">
+            <img src="images/hebergements/au_coeur_de_leau.webp" alt="image d'une chambre de l'hôtel au coeur de l'eau">
             <div class="populary-text-content">
-              <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+              <h3>Au coeur de l'eau Chambres d'hôtes</h3>
               <p>Nuit à partir de 71€</p>
               <div class="star-container">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star star-blue"></i>
+                <i class="fa-solid fa-star star-blue"></i>
+                <i class="fa-solid fa-star star-blue"></i>
+                <i class="fa-solid fa-star star-blue"></i>
+                <i class="fa-solid fa-star star-grey"></i>
               </div>
             </div>
           </a>
-          <a href="#" class="populary-card">
-            <img src="images/hebergements/hotel_tout_bleu_et_blanc.webp" alt="">
+          <a href="#" class="populary-card box-shadow">
+            <img src="images/hebergements/hotel_tout_bleu_et_blanc.webp" alt="image d'une chambre de l'hôtel tout bleu et blanc">
             <div class="populary-text-content">
               <h3>Hôtel Tout bleu et Blanc</h3>
               <p>Nuit à partir de 68€</p>
               <div class="star-container">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star star-blue"></i>
+                <i class="fa-solid fa-star star-blue"></i>
+                <i class="fa-solid fa-star star-blue"></i>
+                <i class="fa-solid fa-star star-blue"></i>
+                <i class="fa-solid fa-star star-grey"></i>
               </div>
             </div>
           </a>
@@ -260,34 +241,34 @@
     <article class="activities-container">
       <h2>Activités à Marseille</h2>
       <section class="activities-cards-container">
-        <a href="#" class="activities-card">
-          <img src="images/activites/vieux_port.webp" alt="">
+        <a href="#" class="activities-card box-shadow">
+          <img src="images/activites/vieux_port.webp" alt="image du vieux port">
           <h3>Vieux port</h3>
         </a>
         <div class="duo-activities">
-        <a href="#" class="duo-activities-card">
-          <img src="images/activites/fort_de_pomegues.webp" alt="">
-          <h3>Fort de pomègues</h3>
-        </a>
-        <a href="#" class="duo-activities-card">
-          <img src="images/activites/iles_de_frioul.webp" alt="">
-          <h3>îles de Frioul</h3>
-        </a>
-      </div>
-        <a href="#" class="activities-card">
-          <img src="images/activites/parc_national_des_calanques.webp" alt="">
+          <a href="#" class="duo-activities-card box-shadow">
+            <img src="images/activites/fort_de_pomegues.webp" alt="image du fort de pomèges">
+            <h3>Fort de pomègues</h3>
+          </a>
+          <a href="#" class="duo-activities-card box-shadow">
+            <img src="images/activites/iles_de_frioul.webp" alt="image de l'ile de frioul">
+            <h3>îles de Frioul</h3>
+          </a>
+        </div>
+        <a href="#" class="activities-card box-shadow">
+          <img src="images/activites/parc_national_des_calanques.webp" alt="image du parc national des Calanques">
           <h3>Parc National des Calanques</h3>
         </a>
         <div class="duo-activities">
-        <a href="#" class="duo-activities-card">
-          <img src="images/activites/notre_dame_de_la_garde.webp" alt="">
-          <h3>Notre-Dame-de-Garde</h3>
-        </a>
-        <a href="#" class="duo-activities-card">
-          <img src="images/activites/parc_longchamp.webp" alt="">
-          <h3>Parc Longchamp</h3>
-        </a>
-      </div>
+          <a href="#" class="duo-activities-card box-shadow">
+            <img src="images/activites/notre_dame_de_la_garde.webp" alt="image de notre-dame-de-garde">
+            <h3>Notre-Dame-de-Garde</h3>
+          </a>
+          <a href="#" class="duo-activities-card box-shadow">
+            <img src="images/activites/parc_longchamp.webp" alt="image du parc Longchamp">
+            <h3>Parc Longchamp</h3>
+          </a>
+        </div>
       </section>
     </article>
   </main>
