ajustement responsive les plus populaire en -1300px et responsive fort de pomègue daqns les activités à marseille

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
           <h3>Vieux port</h3>
         </a>
         <div class="duo-activities">
-          <a href="#" class="duo-activities-card box-shadow">
+          <a href="#" class="duo-activities-card box-shadow" id="pomegues">
             <img src="images/activites/fort_de_pomegues.webp" alt="image du fort de pomèges">
             <h3>Fort de pomègues</h3>
           </a>
