ajout de l'étoile les plus populaire, passage en deux colonne format tablette des hébergement à marseille, optimisation du code W3C

--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title> Bookli </title>
+  <title> Booki </title>
 
-  <!---- Meta description ---->
+  <!-- Meta description -->
 
   <meta name="description" content="Réservation en ligne d'hébergements">
 
 
-  <!---- Stylesheet ---->
+  <!-- Stylesheet -->
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 
-  <!---- Font-awesome ---->
+  <!-- Font-awesome--->
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
@@ -24,7 +24,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-  <!---- Font-Raleway ---->
+  <!-- Font-Raleway -->
 
   <link
     href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
@@ -36,7 +36,7 @@
 
 <body>
 
-  <!---- header ---->
+  <!-- header -->
 
   <header>
     <nav>
@@ -48,26 +48,26 @@
     </nav>
   </header>
 
-  <!---- Main ---->
+  <!-- Main -->
 
   <main>
 
 
-    <!---- search ---->
+    <!-- search -->
 
     <div class="entete">
-      <h2>Trouvez votre hébergement pour desvacances de rêve</h2>
+      <h2>Trouvez votre hébergement pour des vacances de rêve</h2>
       <p>En plein centre ville ou en pleine nature</p>
       
       <form class="search-input">
-        <label for="search"><i class="fa-sharp fa-solid fa-location-dot"></i></label>
+        <label><i class="fa-sharp fa-solid fa-location-dot"></i></label>
         <input type="text" name="search" required placeholder="Marseille, France">
         <button>Rechercher<i class="fa-solid fa-magnifying-glass"></i></button>
       </form>
    
 
 
-      <!---- Filter ---->
+      <!-- Filter -->
 
 
       <div class="filters-container">
@@ -93,14 +93,15 @@
       <p class="infos"><i class="fa-solid fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
     </div>
 
-    <!---- Hebergements ---->
+    
+    <!-- Hebergements -->
 
 
     <section class="hebergements-container" id="scroll-to-hebergements">
       <article class="marseille-container">
 
 
-        <!---- Hebergements à Marseille ---->
+        <!-- Hebergements à Marseille -->
 
 
         <h2>Hébergements à Marseille</h2>
@@ -182,11 +183,11 @@
       </article>
 
 
-      <!---- Hebergements les plus populaires ---->
+      <!-- Hebergements les plus populaires -->
 
 
       <article class="populary-container">
-        <h2>Les plus populaires</h2>
+        <h2>Les plus populaires <i class="fa-solid fa-star"></i></h2>
         <section class="populary-cards-container">
           <a href="#" class="populary-card box-shadow">
             <img src="images/hebergements/le_soleil_du_matin.webp" alt="image d'une chambre de l'hôtel le soleil du matin">
@@ -235,7 +236,7 @@
     </section>
 
 
-    <!---- Activités à marseille ---->
+    <!-- Activités à marseille -->
 
 
     <article class="activities-container" id="scroll-to-activities">
