--- a/index.html
+++ b/index.html
@@ -2,35 +2,35 @@
 <html class="no-js" lang="fr">
 
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8" >
+  <meta name="viewport" content="width=device-width, initial-scale=1" >
   <title> Booki </title>
 
   <!-- Meta description -->
 
-  <meta name="description" content="Réservation en ligne d'hébergements" />
+  <meta name="description" content="Réservation en ligne d'hébergements" >
 
 
   <!-- Stylesheet -->
 
-  <link rel="stylesheet" href="css/normalize.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/normalize.css" >
+  <link rel="stylesheet" href="css/style.css" >
 
   <!-- Font-awesome -->
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    crossorigin="anonymous" referrerpolicy="no-referrer" >
+  <link rel="preconnect" href="https://fonts.googleapis.com" >
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
 
   <!-- Font-Raleway -->
 
   <link
     href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet" />
+    rel="stylesheet" >
 
-  <meta name="theme-color" content="#fafafa" />
+  <meta name="theme-color" content="#fafafa" >
 </head>
 
 
