changement marseille container en DIV

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
     <!-- Hebergements -->
 
 
-    <section class="hebergements-container" id="scroll-to-hebergements">
-      <article class="marseille-container">
+    <div class="hebergements-container" id="scroll-to-hebergements">
+      <section class="marseille-container">
 
 
         <!-- Hebergements à Marseille -->
@@ -180,7 +180,7 @@
           </a>
         </section>
         <a class="show-more" href="#">Afficher plus</a>
-      </article>
+      </section>
 
 
       <!-- Hebergements les plus populaires -->
@@ -233,7 +233,7 @@
           </a>
         </section>
       </article>
-    </section>
+    </div>
 
 
     <!-- Activités à marseille -->
