petits changements pour soutenance OC

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
       
       <form class="search-input">
         <label><i class="fa-sharp fa-solid fa-location-dot"></i></label>
-        <input type="text" name="search" required placeholder="Marseille, France">
-        <button><i class="fa-solid fa-magnifying-glass"></i></button>
+        <input type="search" name="search" required placeholder="Marseille, France">
+        <button><span>Rechercher</span><i class="fa-solid fa-magnifying-glass"></i></button>
       </form>
    
 
